# -Computer-Technology-tasks-4-sem-MIPT

./: .gitignore  CMakeLists.txt  Readme.md  clean.sh  frac_class.hpp  frac_class.py  main.cpp  prime_numbers_generator.py  script.sh  test.cpp  tests.py
.github/workflows/: main.yml  test_on_push.yaml  test_on_push.yml
include/: frac_class.py
src/: main.cpp
test/: run_tests.sh  test.cpp  tests.py
